<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:visibility="visible"
    android:id="@+id/bottom_dialog"
    android:background="#ffffffff"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:alpha="1.0"
    >
    <RelativeLayout
        android:id="@+id/bottom_more_bannerAd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    </RelativeLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="#ffffffff"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:alpha="1.0">

        <!--设置-->
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="180.0dip" android:layout_weight="1.0">
            <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                <RelativeLayout android:gravity="center" android:id="@+id/popup_setting" android:background="@drawable/popupwindow_selector" android:paddingTop="@dimen/menu_padding_top" android:paddingBottom="@dimen/menu_padding_bottom" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <ImageView android:id="@+id/img_setting" android:layout_width="@dimen/menu_img_size" android:layout_height="@dimen/menu_img_size" android:src="@mipmap/ic_setting" android:layout_centerHorizontal="true" />
                    <TextView android:textSize="@dimen/menu_text_size" android:textColor="@color/popupwindow_item_text" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/menu_settings" android:layout_below="@id/img_setting" android:layout_centerHorizontal="true" />
                </RelativeLayout>
                <ImageView android:layout_gravity="center" android:id="@+id/more_setting_notice" android:visibility="gone" android:layout_width="12.0dip" android:layout_height="12.0dip" android:layout_marginLeft="13.5dip" android:layout_marginBottom="22.5dip" android:src="@mipmap/recommend_red_notice" />
            </FrameLayout>
            <RelativeLayout android:gravity="center" android:id="@+id/popup_history" android:background="@drawable/popupwindow_selector" android:paddingTop="0.0dip" android:paddingBottom="@dimen/menu_padding_bottom" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                <ImageView android:id="@+id/img_history" android:layout_width="@dimen/menu_img_size" android:layout_height="@dimen/menu_img_size" android:src="@mipmap/ic_history" android:layout_centerHorizontal="true" />
                <TextView android:textSize="@dimen/menu_text_size" android:textColor="@color/popupwindow_item_text" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/menu_history" android:layout_below="@id/img_history" android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </LinearLayout>


        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="180.0dip" android:layout_weight="1.0">
            <RelativeLayout android:gravity="center" android:id="@+id/popup_model" android:background="@drawable/popupwindow_selector" android:paddingTop="@dimen/menu_padding_top" android:paddingBottom="@dimen/menu_padding_bottom" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                <ImageView android:id="@+id/img_model" android:layout_width="@dimen/menu_img_size" android:layout_height="@dimen/menu_img_size" android:src="@mipmap/ic_day" android:layout_centerHorizontal="true" />
                <TextView android:textSize="@dimen/menu_text_size" android:textColor="@color/popupwindow_item_text" android:gravity="center" android:id="@+id/popup_model_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/menu_day" android:layout_below="@id/img_model" android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                <RelativeLayout android:gravity="center" android:id="@+id/popup_image" android:background="@drawable/popupwindow_selector" android:paddingTop="0.0dip" android:paddingBottom="@dimen/menu_padding_bottom" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <ImageView android:id="@+id/img_image" android:layout_width="@dimen/menu_img_size" android:layout_height="@dimen/menu_img_size" android:src="@mipmap/ic_photo" android:layout_centerHorizontal="true" />
                    <TextView android:textSize="@dimen/menu_text_size" android:textColor="@color/popupwindow_item_text" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/menu_image" android:layout_below="@id/img_image" android:layout_centerHorizontal="true" />
                </RelativeLayout>
                <ImageView android:layout_gravity="center" android:id="@+id/more_image_notice" android:visibility="gone" android:layout_width="12.0dip" android:layout_height="12.0dip" android:layout_marginLeft="13.5dip" android:layout_marginBottom="27.5dip" android:src="@mipmap/recommend_red_notice" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="180.0dip" android:layout_weight="1.0">
            <RelativeLayout android:gravity="center" android:id="@+id/popup_share" android:background="@drawable/popupwindow_selector" android:paddingTop="@dimen/menu_padding_top" android:paddingBottom="@dimen/menu_padding_bottom" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                <ImageView android:id="@+id/img_share" android:layout_width="@dimen/menu_img_size" android:layout_height="@dimen/menu_img_size" android:src="@mipmap/menu_share_none" android:layout_centerHorizontal="true" />
                <TextView android:textSize="@dimen/menu_text_size" android:textColor="@color/popupwindow_item_text" android:gravity="center" android:id="@+id/img_share_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/menu_share" android:layout_below="@id/img_share" android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                <RelativeLayout android:gravity="center" android:id="@+id/popul_no_cache" android:background="@drawable/popupwindow_selector" android:paddingTop="0.0dip" android:paddingBottom="@dimen/menu_padding_bottom" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <ImageView android:id="@+id/no_cache_image" android:layout_width="@dimen/menu_img_size" android:layout_height="@dimen/menu_img_size" android:src="@mipmap/no_cache_none" android:layout_centerHorizontal="true" />
                    <TextView android:textSize="@dimen/menu_text_size" android:textColor="@color/popupwindow_item_text" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/menu_nocache" android:layout_below="@id/no_cache_image" android:layout_centerHorizontal="true" />
                </RelativeLayout>
                <ImageView android:layout_gravity="center" android:id="@+id/no_cache_image_notice" android:visibility="gone" android:layout_width="12.0dip" android:layout_height="12.0dip" android:layout_marginLeft="13.5dip" android:layout_marginBottom="22.5dip" android:src="@mipmap/recommend_red_notice" />
            </FrameLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="180.0dip" android:layout_weight="1.0">
            <RelativeLayout android:gravity="center" android:id="@+id/popup_open_bookmark" android:background="@drawable/popupwindow_selector" android:paddingTop="@dimen/menu_padding_top" android:paddingBottom="@dimen/menu_padding_bottom" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                <ImageView android:id="@+id/img_open_bookmark" android:layout_width="@dimen/menu_img_size" android:layout_height="@dimen/menu_img_size" android:src="@mipmap/ic_bookmark" android:layout_centerHorizontal="true" />
                <TextView android:textSize="@dimen/menu_text_size" android:textColor="@color/popupwindow_item_text" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/menu_bookmark_open" android:layout_below="@id/img_open_bookmark" android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                <RelativeLayout android:gravity="center" android:id="@+id/popup_download" android:background="@drawable/popupwindow_selector" android:paddingTop="0.0dip" android:paddingBottom="@dimen/menu_padding_bottom" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <ImageView android:id="@+id/img_download" android:layout_width="@dimen/menu_img_size" android:layout_height="@dimen/menu_img_size" android:src="@mipmap/ic_download" android:layout_centerHorizontal="true" />
                    <TextView android:textSize="@dimen/menu_text_size" android:textColor="@color/popupwindow_item_text" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/download" android:layout_below="@id/img_download" android:layout_centerHorizontal="true" />
                </RelativeLayout>
                <ImageView android:layout_gravity="center" android:id="@+id/more_download_notice" android:visibility="gone" android:layout_width="12.0dip" android:layout_height="12.0dip" android:layout_marginLeft="13.5dip" android:layout_marginBottom="27.5dip" android:src="@mipmap/recommend_red_notice" />
            </FrameLayout>
        </LinearLayout>

        <!--退出-->
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="180.0dip" android:layout_weight="1.0">
            <RelativeLayout android:gravity="center" android:id="@+id/popup_add_bookmark" android:background="@drawable/popupwindow_selector" android:paddingTop="@dimen/menu_padding_top" android:paddingBottom="@dimen/menu_padding_bottom" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                <ImageView android:id="@+id/img_add_bookmark" android:layout_width="@dimen/menu_img_size" android:layout_height="@dimen/menu_img_size" android:src="@mipmap/ic_bookmark_add" android:layout_centerHorizontal="true" />
                <TextView android:textSize="@dimen/menu_text_size" android:textColor="@color/popupwindow_item_text" android:gravity="center" android:id="@+id/add_bookmark_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/menu_bookmark_add" android:layout_below="@id/img_add_bookmark" android:layout_centerHorizontal="true" />
            </RelativeLayout>
            <RelativeLayout
                android:gravity="center"
                android:id="@+id/popup_exit"
                android:background="@drawable/popupwindow_selector"
                android:paddingTop="0.0dip"
                android:paddingBottom="@dimen/menu_padding_bottom"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0">
                <ImageView android:id="@+id/img_exit" android:layout_width="@dimen/menu_img_size" android:layout_height="@dimen/menu_img_size" android:src="@mipmap/ic_exit" android:layout_centerHorizontal="true" />
                <TextView android:textSize="@dimen/menu_text_size" android:textColor="@color/popupwindow_item_text" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/menu_exit" android:layout_below="@id/img_exit" android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
